iptables.rules
# Generated by iptables-save v1.4.21 on Fri Nov 21 21:49:42 2014
#!/sbin/iptables-restore
*filter
:INPUT ACCEPT [915:98478]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [539009:727226840]
:sshguard - [0:0]
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p tcp ! --syn -m state --state NEW -j DROP
-A INPUT -f -j DROP
-A INPUT -p tcp --tcp-flags ALL ALL -j DROP
-A INPUT -p tcp --tcp-flags ALL NONE -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 292 -j sshguard
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p icmp -m limit --limit 5/sec --limit-burst 1 -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp -j DROP
-A OUTPUT -m state --state INVALID -j DROP
-A sshguard -m state --state NEW -m recent --name SSH --update --seconds 1 --hitcount 3 -j DROP
-A sshguard -m state --state NEW -m recent --name SSH --set -j ACCEPT
-A sshguard -j ACCEPT
COMMIT
# Completed on Fri Nov 21 21:49:42 2014
